[tool.poetry]
name = "uqdl"
version = "0.1.0"
description = ""
authors = ["Alexander Marquard <marquard82@googlemail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pymc = "^5.15.0"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
scipy = "^1.13.1"
arviz = "^0.18.0"
ipywidgets = "^8.1.2"
graphviz = "^0.20.3"
seaborn = "^0.13.2"
torch = "^2.3.0"
bayesian-torch = "^0.5.0"
torchbnn = "^1.2"
ipykernel = "^6.29.4"
libpython = "^0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
